<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_page_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/rl_financial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_financial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/financial_summary"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_financial_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_financial"
                android:gravity="center_horizontal"
                android:text="Total Net Worth : 10 Lakhs"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_current_spend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight=".5"
            card_view:cardCornerRadius="4dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:id="@+id/rl_current_spend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/tv_current_spend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/current_spend"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_current_spend_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_current_spend"
                    android:gravity="center_horizontal"
                    android:text="20K"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_current_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight=".5"
            card_view:cardCornerRadius="4dp"

            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">
            <!--card_view:cardBackgroundColor="@android:color/darker_gray"-->
            <!--card_view:contentPadding="@dimen/cv_padding"-->
            <RelativeLayout
                android:id="@+id/rl_current_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/tv_current_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/current_income"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_current_income_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_current_income"
                    android:gravity="center_horizontal"
                    android:text="20K"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/bill_reminder"
                    android:textColor="@color/header_color"
                    android:textSize="@dimen/header_txt_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_show_all_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/show_all"
                    android:textColor="@color/header_color"
                    android:textSize="@dimen/header_txt_size"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View style="@style/header_seprator" />

            <ListView
                android:id="@+id/lv_reminder"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp">

                <com.in.monetapp.views.ClickableViewPager
                    android:id="@+id/viewpager_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />

                <com.in.monetapp.pageindicator.CirclePageIndicator
                    android:id="@+id/indicator_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:padding="10dip"
                    card_view:fillColor="#0064A8"
                    card_view:pageColor="@android:color/white"
                    card_view:strokeColor="#0064A8" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/offer"
                    android:textColor="@color/header_color"
                    android:textSize="@dimen/header_txt_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_show_all_offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/show_all"
                    android:textColor="@color/header_color"
                    android:textSize="@dimen/header_txt_size"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View style="@style/header_seprator" />

            <ListView
                android:id="@+id/lv_offer"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp">

                <com.in.monetapp.views.ClickableViewPager
                    android:id="@+id/viewpager_offer"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />

                <com.in.monetapp.pageindicator.CirclePageIndicator
                    android:id="@+id/indicator_offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:padding="10dip"
                    card_view:fillColor="#0064A8"
                    card_view:pageColor="@android:color/white"
                    card_view:strokeColor="#0064A8" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>